@@ -1,15 +1,13 @@
 package com.team6.backend.favorite.pfmc.controller;
 
-import com.team6.backend.common.exception.EncoreHubException;
 import com.team6.backend.favorite.pfmc.dto.FavoritePfmcRequestDto;
 import com.team6.backend.favorite.pfmc.dto.FavoritePfmcResponseDto;
 import com.team6.backend.favorite.pfmc.service.FavoritePfmcService;
-import org.modelmapper.ModelMapper;
-import org.springframework.http.HttpStatus;
+import com.team6.backend.security.jwt.JwtUtil;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
+import jakarta.servlet.http.HttpServletRequest;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -18,45 +16,32 @@ import java.util.stream.Collectors;
 public class FavoritePfmcController {
 
     private final FavoritePfmcService favoritePfmcService;
-    private final ModelMapper modelMapper;
+    private final JwtUtil jwtUtil;
 
-    public FavoritePfmcController(FavoritePfmcService favoritePfmcService, ModelMapper modelMapper) {
+    public FavoritePfmcController(FavoritePfmcService favoritePfmcService, JwtUtil jwtUtil) {
         this.favoritePfmcService = favoritePfmcService;
-        this.modelMapper = modelMapper;
+        this.jwtUtil = jwtUtil;
     }
 
     @PostMapping("/toggle")
-    public ResponseEntity<String> toggleFavoritePfmc(@RequestBody FavoritePfmcRequestDto request) {
-        try {
-            favoritePfmcService.toggleFavoritePfmc(request);
-            return ResponseEntity.ok("즐겨찾기 PFMC 상태가 성공적으로 토글되었습니다.");
-        } catch (EncoreHubException e) {
-            // 사용자 정의 예외 처리
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("오류: " + e.getMessage());
-        } catch (Exception e) {
-            // 일반 예외 처리
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("내부 서버 오류: " + e.getMessage());
+    public ResponseEntity<String> toggleFavoritePfmc(@RequestBody FavoritePfmcRequestDto request, HttpServletRequest httpServletRequest) {
+        String accessToken = jwtUtil.getAccessTokenFromHeader(httpServletRequest);
+        if (accessToken == null) {
+            return ResponseEntity.badRequest().body("Invalid token.");
         }
+        String email = jwtUtil.getEmailFromToken(accessToken);
+        favoritePfmcService.toggleFavoritePfmc(request.getPerformanceId(), email);
+        return ResponseEntity.ok("Favorite PFMC status toggled successfully.");
     }
 
-    @GetMapping("/members/{memberId}/favorite-pfmc")
-    public ResponseEntity<List<FavoritePfmcResponseDto>> getFavoritePfmcListByMemberId(@PathVariable Long memberId) {
-        try {
-            List<FavoritePfmcResponseDto> favoritePfmcList = favoritePfmcService.getFavoritePfmcListByMemberId(memberId)
-                    .stream()
-                    .map(fp -> modelMapper.map(fp, FavoritePfmcResponseDto.class))
-                    .collect(Collectors.toList());
-            return ResponseEntity.ok(favoritePfmcList);
-        } catch (EncoreHubException e) {
-            // 사용자 정의 예외 처리
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Collections.emptyList()); // 또는 애플리케이션 로직에 따라 다르게 처리할 수 있습니다.
-        } catch (Exception e) {
-            // 일반 예외 처리
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.emptyList()); // 또는 애플리케이션 로직에 따라 다르게 처리할 수 있습니다.
+    @GetMapping("/favorites")
+    public ResponseEntity<List<FavoritePfmcResponseDto>> getFavoritePfmcList(HttpServletRequest httpServletRequest) {
+        String accessToken = jwtUtil.getAccessTokenFromHeader(httpServletRequest);
+        if (accessToken == null) {
+            return ResponseEntity.badRequest().body(List.of()); // Or handle differently
         }
+        String email = jwtUtil.getEmailFromToken(accessToken);
+        List<FavoritePfmcResponseDto> favoritePfmcList = favoritePfmcService.getFavoritePfmcListByEmail(email);
+        return ResponseEntity.ok(favoritePfmcList);
     }
 }
